# OCR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/v1/routes/: ocr.py
app/core/: config.py  exceptions.py  logging.py
app/models/: schemas.py
app/services/: image_processor.py  ocr_service.py  pdf_generator.py
app/utils/: file_utils.py
